# submodule-test

./: CMakeLists.txt  main.cpp
cmake/: includeAll.cmake
include/: somelib.h
include/submodule-test/: somelib.h
src/: somelib.cpp
